--- a/assets/css/home-4-style.css
+++ b/assets/css/home-4-style.css
@@ -105,3 +105,78 @@
 	color: #99a1af;
 	border-color: #99a1af
 }
+body .t-left>.content {
+    box-shadow: 0px 10px 30px 0px rgb(0 12 31 / 8%);
+    padding: 20px 30px;
+    background-color: white;
+    background-image: linear-gradient( 
+90deg
+, rgb(127 42 150) 0%, rgb(222 7 138) 100%);
+    position: relative;
+    border-radius: 6px;
+}
+body .t-right>.content {
+    box-shadow: 0px 10px 30px 0px rgb(0 12 31 / 8%);
+    padding: 20px 30px;
+    background-color: white;
+    background-image: linear-gradient( 
+90deg
+, rgb(216 10 139) 0%, rgb(80 31 111) 100%);
+    position: relative;
+    border-radius: 6px;
+    border: 2px solid #fff;
+}
+body {
+    background: #f3dcff !important;
+}
+body .home-4-banner {
+    background: -webkit-linear-gradient(
+50deg
+, rgb(75 22 95) 0%, rgb(129 43 152) 100%);
+    background: linear-gradient(
+50deg
+, rgb(54 24 89) 0%, rgb(117 18 107) 100%);
+}
+
+body .btn:hover, 
+
+body .pricing-footer a:hover,
+
+body .btn.fill-style {
+    background-color: #dd078a;
+    border-color: #74278d;
+    border: 2px solid #5a2178 !important;
+}
+body .h4-get-the-app .overlay {
+    opacity: .95;
+    background: -moz-linear-gradient(-90deg, rgb(50,73,214) 0%, rgb(13,197,173) 100%);
+    background: -webkit-linear-gradient(
+-90deg
+, rgb(131 41 149) 0%, rgb(215 10 139) 100%);
+    background: -ms-linear-gradient(-90deg, rgb(50,73,214) 0%, rgb(13,197,173) 100%);
+    background: linear-gradient(
+-90deg
+, rgb(130 41 150) 0%, rgb(215 10 139) 100%);
+}
+
+body .footer.style-3 {
+ 
+    background: -moz-linear-gradient( 40deg, rgb(50,73,214) 0%, rgb(13,197,173) 100%);
+    background: -webkit-linear-gradient( 
+40deg
+, rgb(185 21 143) 0%, rgb(135 40 150) 100%);
+    background: linear-gradient( 
+40deg
+, rgb(224 6 138) 0%, rgb(128 42 151) 100%);
+}
+i.fa.fa-telegram,
+i.fa.fa-twitter,
+i.fa.fa-envelope{
+      color: #4f1e6e;
+}
+p {
+    color: #db0789;
+}
+.nav-search.order-2.order-lg-3 a {
+    background: #ea058d !important;
+}
